# basic_shorted_url

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.template  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7b5704286242_add_migration.py  acb53ad380cb_add_table_url_click.py
config/: logging.ini  redis.conf
src/api/: __init__.py  redirect_url_api.py  shorten_url_api.py
src/cache/: redis.py
src/core/: config.py  limiter.py  security.py
src/db/: db_engine.py
src/dbiz/: dbiz_shorten_url.py
src/extensions/: response_wrapper.py
src/helper/: utils.py
src/models/: __init__.py  base.py  shorten_url.py  url_click.py
src/schemas/: __init__.py  shorten_url.py
