[tool.poetry]
name = "uLink"
version = "0.1.0"
description = "uCode url shorten service"
authors = ["QuyPN <quypn@dkedtech.vn>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
SQLAlchemy = "1.4.27"
pydantic = "1.8.2"
alembic = "1.7.5"
PyMySQL = "1.0.2"
mysqlclient = "2.1.0"
starlette = "0.16.0"
aioredis = "2.0.0"
python-dotenv = "0.19.2"
uvicorn = "0.15.0"
slowapi = "0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
